<resources>
    <string name="app_name">SimplyBackup</string>
    <string name="Connections">Connections</string>
    <string name="ConfigureConnection">Configure connection</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Name">Name</string>
    <string name="AddPath">Add path</string>
    <string name="Path">Path</string>
    <string name="Delete">Delete</string>
    <string name="title_activity_add_connection" translatable="false">AddConnectionActivity</string>
    <string name="Save">Save</string>
    <string name="ConfigurePaths">Configure paths</string>
    <string name="RemotePath">Remote path</string>
    <string name="SelectScheduleType">Select schedule type</string>
    <string name="Daily">Daily</string>
    <string name="Weekly">Weekly</string>
    <string name="Monthly">Monthly</string>
    <string name="Yearly">Yearly</string>
    <string name="History">History</string>
    <string name="LastBackup">Last backup</string>
    <string name="LastBackupSize">Size of last backup</string>
    <string name="NextBackup">Next backup</string>
    <string name="TotalBackupSize">Total size of backups</string>
    <string name="WifiOnly">Backup only on wifi connection</string>
    <string name="BackingUpNotificationTitle">Backing up…</string>
    <string name="CreatingArchive">Creating backup for %s</string>
    <string name="notification_channel_id" translatable="false">simplybackup_notify_channel</string>
    <string name="notification_channel_name" translatable="false">Backup Notification</string>
    <string name="ErrorNotificationTitle">Error backing up</string>
    <string name="SuccessNotificationTitle">Backup succeed</string>
    <string name="SuccessNotificationText">The backup of %s succeed</string>
    <string name="ErrorException">Backup for %s failed with an exception (check logcat)</string>
    <string name="ErrorPackaging">Zipping files for %s failed</string>
    <string name="ErrorWifi">Wifi was not connected while backing up %s</string>
    <string name="title_activity_backup_history" translatable="false">BackupHistoryActivity</string>
    <string name="Retry">Retry</string>
    <string name="Restore">Restore</string>
    <string name="DeleteAlertText">Are you sure you want to delete this file in the cloud?</string>
    <string name="Yes">Yes</string>
    <string name="Cancel">Cancel</string>
    <string name="SureQuestion">Sure?</string>
    <string name="ErrorLoadingFiles">Couldn\'t load files for this backup…</string>
    <string name="NoFiles">There are no files to display for this backup yet…</string>
    <string name="RestoreAlertText">Are you sure you want to restore this backup? Files can be replaced by this!</string>
    <string name="RestoringBackup">Restoring backup…</string>
    <string name="RestoringBackupSucceed">Successfully restored the backup!</string>
    <string name="RestoringBackupError">Couldn\'t restore the backup!</string>
    <string name="SFTP" translatable="false">SFTP</string>
    <string name="EnterName">Please enter a name</string>
    <string name="EnterHost">Please enter a host</string>
    <string name="EnterUsername">Please enter an username</string>
    <string name="EnterPassword">Please enter a password</string>
    <string name="EnterRemotePath">Please enter a remote path</string>
    <string name="Host">Host</string>
    <string name="BackupPassword">Backup password</string>
    <string name="Search">Search</string>
    <string name="Backup">Backup</string>
    <string name="BackupStarted">Backup for %s started</string>
    <string name="ConnectionRemoved">Successfully deleted %s</string>
    <string name="Undo">Undo</string>
    <string name="OK">OK</string>
    <string name="AddNewAccount">Add new account</string>
    <string name="SelectedAccount">Selected account</string>
    <string name="FolderLink">Link to folder</string>
    <string name="Error">Error</string>
    <string name="Accounts">Accounts</string>
    <string name="More">More</string>
    <string name="ConnectionStillExists">There is still at least one connection that uses this account</string>
    <string name="EnterPath">Please enter a path</string>
    <string name="ErrorInternet">Internet connection wasn\'t available while backing up %s</string>
    <string name="EnterRepoId">Please enter a repo id</string>
    <string name="RepoId">RepoId</string>
    <string name="SeaFile" translatable="false">SeaFile</string>
    <string name="StartRemotePathWithSlash">Remote path has to start with \"/\"</string>
    <string name="RemotePathEndsWithSlash">Remote path must not end with \"/\"</string>
    <string name="PlaceholderValue" translatable="false">.</string>
    <string name="UploadingBackup">Uploading backup for %s</string>
</resources>