...
    Column(
        modifier = Modifier
            .fillMaxWidth(),
        verticalArrangement = Arrangement.spacedBy(8.dp)
    ) {
        InformationCard(
            name = viewModel.State.Name,
            onNameChange = {
                viewModel.OnEvent(
                    GoogleDriveConfigurationEvent.OnNameChange(
                        it
                    )
                )
...
                        it
                    )
                )
            }
        )

        LoginCard(
            onClick = {
                viewModel.OnEvent(GoogleDriveConfigurationEvent.OnLoginCardClicked)
            },
            account = viewModel.State.SelectedAccount,
            isError = viewModel.State.SelectedAccountError
        )
...
    }

    if (shown) {
        Dialog(onDismissRequest = onDismiss) {
            Card(
                modifier = Modifier
                    .testTag("AccountSelectionCard")
            ) {
                Column(
                    modifier = Modifier
                        .padding(8.dp)
                ) {
                    LazyColumn {
...
